Change the design and added new elments

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   stories_for_flutter: ^1.2.1
   flutter_svg: ^2.0.9
+  floating_bottom_bar: ^0.0.2
 
 dev_dependencies:
   flutter_test:
